--- a/styles/globals.css
+++ b/styles/globals.css
@@ -73,13 +73,13 @@
 body {
   background-color: white;
   /* font-family: "VT323", monospace; */
-  /* height: 100%;
+  height: 100%;
   width: 100%;
   background-image: url('../public/sangimgg.png');
   background-position: center;
   background-repeat: no-repeat;
   background-size: cover;
-  position: relative; */
+  position: relative;
 }
 
 .variant {
