--- a/styles/globals.css
+++ b/styles/globals.css
@@ -73,6 +73,9 @@
 body {
   background-color: white;
   /* font-family: "VT323", monospace; */
+  /* background-image: url('../public/sangimgg.png');
+  background-repeat: no-repeat;
+  background-size: cover; */
 }
 
 /* .variant {
