--- a/styles/globals.css
+++ b/styles/globals.css
@@ -72,8 +72,8 @@
 
 body {
   background-color: white;
-  /* font-family: "VT323", monospace; */
-  /* background-image: url('../public/sangimgg.png');
+  /* font-family: "VT323", monospace;
+  background-image: url('../public/sangimgg.png');
   background-repeat: no-repeat;
   background-size: cover; */
 }
